# net004

./: CMakeLists.txt  README.md  readme.md
caffe_example/: .cifar10_quick_train_test.prototxt.swp  CMakeLists.txt  caffe_parser.cpp  cifar10.cpp  cifar10_quick_iter_5000.caffemodel.h5  cifar10_quick_iter_5000.caffemodel.txt  cifar10_quick_train_test.prototxt  westerdam-ship-size.jpg.output.txt  westerdam-ship-size.jpg.result.txt  westerdam-ship-size.jpg.result_backward.txt
caffe_models/: DenseNet_121.prototxt  ResNet-101-deploy.prototxt  ResNet-152-deploy.prototxt  ResNet-50-deploy.prototxt  VGG_ILSVRC_16_layers_deploy.prototxt  bvlc_alexnet.prototxt  bvlc_googlenet_deploy.prototxt  cifar10.list  deploy_inception-resnet-v2.prototxt  deploy_inception-v3.prototxt  deploy_inception-v4.prototxt  sqnet1.0.prototxt  sqnet1.1.prototxt  sqnet_res.prototxt
caffe_models/detection/: faster_rcnn_test.pt  gnet_deploy.prototxt  ssd_test.prototxt
cmake/: FindvecLib.cmake
example/: CMakeLists.txt  test_connections.cpp  test_forward.cpp  test_layers.cpp  test_net.cpp  test_parser.cpp
example/common_net/: CMakeLists.txt  caffe_mean_show.cpp  caffe_parser.cpp  caffe_parser.h  caffe_show.cpp  caffe_train.cpp  model_cvt.cpp  net_test.cpp  net_train.cpp
example/faster_rcnn/: CMakeLists.txt  caffe_parser.cpp  caffe_parser.h  caffe_show.cpp  faster_rcnn_tool.cpp  faster_rcnn_tool.h  model_cvt.cpp  net_test.cpp
example/fcn_seg/: .net_test.cpp.swp  CMakeLists.txt  caffe_parser.cpp  caffe_parser.h  caffe_show.cpp  model_cvt.cpp  net_test.cpp
example/ssd/: CMakeLists.txt  caffe_parser.cpp  caffe_parser.h  model_cvt.cpp
example/yolov1/: CMakeLists.txt  caffe_parser.cpp  caffe_parser.h  model_cvt.cpp  net_test.cpp
example2/: CMakeLists.txt
example2/common_net/: CMakeLists.txt  caffe_parser.cpp  caffe_show.cpp  model_cvt.cpp  net_test.cpp
example2/faster_rcnn/: CMakeLists.txt  caffe_show.cpp  faster_rcnn_tool.cpp  model_cvt.cpp
example2/fcn_seg/: CMakeLists.txt  model_cvt.cpp  net_test.cpp
example2/yolov1/: .net_test.cpp.swp  CMakeLists.txt  caffe_parser.h  model_cvt.cpp  net_test.cpp
include/: ActivityLayer.h  BNLayer.h  BaseLayer.h  BaseRun.h  Blob.h  ConcatLayer.h  Connections.h  ConvLayer.h  CropLayer.h  DConvLayer.h  DataLayer.h  DisplayRun.h  EltwiseLayer.h  FCLayer.h  FillAndForwardRun.h  FillAndTestRun.h  ForwardBackwardRun.h  ForwardTestRun.h  InitRun.h  JsonParser.h  LRNLayer.h  Layers.h  LossLayer.h  Net004.h  NetGame.h  NetInitRun.h  Parser.h  PoolLayer.h  ProposalLayer.h  ROIPoolingLayer.h  ReshapeLayer.h  RoipoolLayer.h  SaveRun.h  ScaleLayer.h  SoftmaxLayer.h  SplitLayer.h  UpdateRun.h  im2col.h  my_bigfile_reader.h
include2/: ActivityLayer.h  BNLayer.h  BaseLayer.h  ConvLayer.h  DConvLayer.h  DataLayer.h  EltwiseLayer.h  FCLayer.h  LRNLayer.h  Layers.h  LossLayer.h  Net004.h  Parser.h  PoolLayer.h  ProposalLayer.h  SoftmaxLayer.h  SplitLayer.h
models/: alexnet.net004.net  cifar.net004.data  cifar.net004.net  cifar_test.net004.net  dense121.net004.net  faster_rcnn.net004.net  fcn_seg_8s.net004.net  gnetv1.net004.net  gnetv3.net004.net  gnetv4.net004.net  inception-res-v2.net004.net  resnet101.net004.net  resnet152.net004.net  resnet50.net004.net  sqnet1.0.net004.net  sqnet1.1.net004.net  sqnet_res.net004.net  vgg16.net004.net  yolov1.net004.net
models/detection/: faster_rcnn.net004.net  ssd.net004.net  yolov1.net004.net
models/segmentation/: fcn8s.net004.net
models2/: alexnet.net004.net  cifar.net004.net  dense121.net004.net  faster_rcnn.net004.net  gnetv1.net004.net  gnetv3.net004.net  gnetv4.net004.net  inception-res-v2.net004.net  resnet101.net004.net  resnet152.net004.net  resnet50.net004.net  sqnet1.0.net004.net  sqnet1.1.net004.net  sqnet_res.net004.net  vgg16.net004.net
src/: ActivityLayer.cpp  BNLayer.cpp  BaseLayer.cpp  BaseRun.cpp  Blob.cpp  CMakeLists.txt  ConcatLayer.cpp  Connections.cpp  Convlayer.cpp  CropLayer.cpp  DConvlayer.cpp  DataLayer.cpp  DisplayRun.cpp  EltwiseLayer.cpp  FCLayer.cpp  FillAndForwardRun.cpp  FillAndTestRun.cpp  ForwardBackwardRun.cpp  ForwardTestRun.cpp  InitRun.cpp  JsonParser.cpp  LRNLayer.cpp  Layers.cpp  LossLayer.cpp  Net004.cpp  NetGame.cpp  NetInitRun.cpp  Parser.cpp  PoolLayer.cpp  ProposalLayer.cpp  ROIPoolingLayer.cpp  ReshapeLayer.cpp  RoipoolLayer.cpp  SaveRun.cpp  ScaleLayer.cpp  SoftmaxLayer.cpp  SplitLayer.cpp  UpdateRun.cpp  im2col.cpp
src2/: ActivityLayer.cpp  BaseLayer.cpp  Blob.cpp  CMakeLists.txt  ConcatLayer.cpp  ConvLayer.cpp  CropLayer.cpp  DataLayer.cpp  EltwiseLayer.cpp  FCLayer.cpp  Layers.cpp  LossLayer.cpp  Net004.cpp  Parser.cpp  PoolLayer.cpp  ReshapeLayer.cpp  SoftmaxLayer.cpp  SplitLayer.cpp
tests/: CMakeLists.txt  alexnet_test.cpp  cifar10_test.cpp  detect_test.cpp  gnet_test.cpp  gnetv1_test.cpp  net_test.cpp  parser.cpp  resnet_test.cpp  sqnet_test.cpp  vgg16_test.cpp
tests/faster_rcnn_test/: .CMakeLists.txt.swp  CMakeLists.txt  faster_rcnn_process.cpp  faster_rcnn_process.h  faster_rcnn_test.cpp
tests/net_test/: CMakeLists.txt  net_test.cpp
tests/yolov1_test/: CMakeLists.txt  yolov1_test.cpp
tools/: CMakeLists.txt  caffe_parser.cpp  caffe_parser.h  caffe_show.cpp  model_cvt.cpp
train_settings/: cifar01.txt
